--- a/ainaa/frontend/package.json
+++ b/ainaa/frontend/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "webpack --mode development --watch",
     "build": "webpack --mode production"
+    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "source-map-loader": "^1.0.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
